# plc-ebpf-autoscaler

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  adjust.py  decoder.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  sql-lint.yml
systemd/: plc-adjust.service  plc-decoder@.service
tests/: test_adjust.py  test_decoder.py
